[gd_scene load_steps=2 format=2]

[ext_resource path="res://Global_Sys.gd" type="Script" id=1]

[node name="Global_Sys" type="Node2D"]
script = ExtResource( 1 )

[node name="speed_update" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="game_time_counter" type="Timer" parent="."]
autostart = true

[node name="pause_time" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="speed_update" to="." method="_on_speed_update_timeout"]
[connection signal="timeout" from="game_time_counter" to="." method="_on_game_time_counter_timeout"]
[connection signal="timeout" from="pause_time" to="." method="_on_pause_time_timeout"]
